--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
     --text-color-4: #bb9d1a;
     --background-color: #3a3a3a;
     --background-color-2: #d8d8d8;
+    --background-color-3: #8a7f7f;
+    --background-color-4: #70b2d1;
     --line-height-1: 1.6;
     --line-height-2: 1.8;
     --line-height-3: 2.4;
@@ -83,6 +85,7 @@ main {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center; */
+    background-color: var(--background-color-4);
     height: 100vh;
     text-align: center;
 }
@@ -90,7 +93,7 @@ main {
 .hero h1{
     margin: var(--margin-3);
     font-size: 4em;
-    color: var(--text-color-3);
+    color: var(--text-color);
     /* text-shadow: #ffffff 2px 2px 4px; */
 }
 .hero h2 {
@@ -191,3 +194,73 @@ footer span {
     font-size: 0.9em;
     color: var(--text-color-3);
 }
+
+/* Formularios Login y Registro */
+
+.form-container {
+    background-color: var(--background-color-2);
+    padding: var(--padding-4);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 4rem auto;
+}
+
+.form-container h2 {
+    margin-bottom: var(--margin-2);
+    color: var(--dark-color);
+}
+
+.form-container label {
+    display: block;
+    margin-bottom: var(--margin-1);
+    font-weight: 600;
+    color: var(--dark-color);
+    text-align: left;
+}
+
+.form-container input {
+    width: 100%;
+    padding: var(--padding-1);
+    margin-bottom: var(--margin-2);
+    border: 1px solid var(--light-color);
+    border-radius: 4px;
+}
+
+.form-container button {
+    width: 100%;
+    padding: var(--padding-2);
+    background-color: var(--primary-color);
+    color: var(--light-color);
+    border: none;
+    border-radius: 4px;
+    font-size: 1.1em;
+    cursor: pointer;
+}
+
+.form-container button:hover {
+    background-color: var(--text-color-3);
+}
+
+.hidden {
+    display: none;
+}
+
+.switch-link {
+    color: var(--primary-color);
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.switch-link:hover {
+    color: var(--text-color-3);
+}
+
+.remember-me input {
+    margin-right: var(--margin-1);
+    align-content: left;
+    
+}
+
+/* Fin Formularios Login y Registro */
+
